--- a/Editor/TwitchmataAutomation_UXML.uxml
+++ b/Editor/TwitchmataAutomation_UXML.uxml
@@ -8,6 +8,8 @@
         <ui:Label tabindex="-1" text="2. Copy the URL from the address bar of your browser and paste in the text field below" display-tooltip-when-elided="true" style="-unity-font-style: normal; white-space: normal; margin-top: 10px; margin-bottom: 5px;" />
         <ui:TextField picking-mode="Ignore" name="channel_auth_field" />
         <ui:Button tabindex="-1" text="Save Channel Auth" display-tooltip-when-elided="true" name="save_channel_auth" style="margin-top: 8px;" />
+        <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="channel_success_label" text="Authentication Saved!" style="white-space: normal; -unity-text-align: upper-center; margin-top: 5px; margin-bottom: 5px; -unity-font-style: bold; display: none;" />
+        <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="channel_error_label" style="white-space: normal; -unity-text-align: upper-center; margin-top: 5px; margin-bottom: 5px; color: rgb(245, 0, 0); -unity-font-style: bold-and-italic; display: none;" />
     </ui:GroupBox>
     <ui:GroupBox text="Authenticate Chat Bot (optional)" style="-unity-font-style: bold; border-left-width: 1px; border-right-width: 1px; border-top-width: 1px; border-bottom-width: 1px; border-top-left-radius: 5px; border-bottom-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); padding-top: 10px; margin-left: 5px; margin-right: 5px; margin-top: 15px; padding-left: 5px; padding-right: 5px;">
         <ui:Label tabindex="-1" text="While you can use your channel&apos;s account for chat communication it is highly recommended that you have a separate chat bot account. If you do, then follow the steps below." display-tooltip-when-elided="true" style="-unity-font-style: italic; white-space: normal; margin-bottom: 10px;" />
@@ -16,6 +18,7 @@
         <ui:Label tabindex="-1" text="2. Copy the URL from the address bar of your browser and paste below to complete authentication" display-tooltip-when-elided="true" style="-unity-font-style: normal; white-space: normal; margin-top: 10px; margin-bottom: 5px;" />
         <ui:TextField picking-mode="Ignore" name="bot_auth_field" />
         <ui:Button tabindex="-1" text="Save Bot Auth" display-tooltip-when-elided="true" name="save_bot_auth" style="margin-top: 8px;" />
+        <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="bot_success_label" text="Authentication Saved!" style="white-space: normal; -unity-text-align: upper-center; margin-top: 5px; margin-bottom: 5px; -unity-font-style: bold; display: none;" />
+        <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="bot_error_label" style="white-space: normal; -unity-text-align: upper-center; margin-top: 5px; margin-bottom: 5px; color: rgb(245, 0, 0); -unity-font-style: bold-and-italic; display: none;" />
     </ui:GroupBox>
-    <ui:Label tabindex="-1" display-tooltip-when-elided="true" name="error_label" style="white-space: normal; -unity-text-align: upper-center; margin-top: 5px; margin-bottom: 5px; color: rgb(245, 0, 0); -unity-font-style: bold-and-italic;" />
 </ui:UXML>
